force-app/main/default/objects/SFL5_Projects__c/fields/Is_Project_Owner_3_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Owner_3_Current_User__c</fullName>
    <formula>IF($User.Id = Project_Owner_3__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Project Owner (3) Current User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>