force-app/main/default/objects/SFL5_Projects__c/fields/Is_Project_Resource_Current_User_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Resource_Current_User_Project__c</fullName>
    <formula>IF($User.Id =  Project_Owner__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Project Owner Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>