force-app/main/default/objects/SFL5_Projects__c/fields/Issue_Month__c.field-meta.xml
<CustomField>
    <fullName>Issue_Month__c</fullName>
    <description
  >If content will be inserted into a magazine, indicate the issue month(s). If unknown select &quot;TBD&quot;.</description>
    <inlineHelpText
  >If content will be inserted into a magazine, indicate the issue month(s). If unknown select &quot;TBD&quot;.</inlineHelpText>
    <label>Issue Month</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>