force-app/main/default/objects/SFL5_Projects__c/fields/Issue_Year__c.field-meta.xml
<CustomField>
    <fullName>Issue_Year__c</fullName>
    <description
  >If content will be inserted into a magazine indicate the 4 digit issue year(s). E.g. &quot;2022&quot;, or &quot;2021, 2022&quot;.</description>
    <inlineHelpText
  >If content will be inserted into a magazine indicate the 4 digit issue year(s). E.g. &quot;2022&quot;, or &quot;2021, 2022&quot;.</inlineHelpText>
    <label>Issue Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>