force-app/main/default/objects/SFL5_Projects__c/fields/ITB_Contract__c.field-meta.xml
<CustomField>
    <fullName>ITB_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ITB Contract</description>
    <inlineHelpText>This is for the ITB Contract number</inlineHelpText>
    <label>ITB Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Projects (Delivery Contract)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>