force-app/main/default/objects/SFL5_Projects__c/fields/Kick_off_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Invitation__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/Eeu2FRmNQ-NLovVJVRzwgoUBihxZcFxu1g0AfDyk1XxCiw?e=20QIKN&quot;,&quot;Sample Kick-off Call Invite/Agenda&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kick-off Invitation</label>
    <type>Text</type>
</CustomField>