force-app/main/default/objects/SFL5_Projects__c/fields/Kick_off_Meeting_Agenda_Doc__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Meeting_Agenda_Doc__c</fullName>
    <label>Kick-off Meeting Agenda Doc</label>
    <type>Url</type>
</CustomField>