force-app/main/default/objects/SFL5_Projects__c/fields/Kick_off_Meeting_MP4__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Meeting_MP4__c</fullName>
    <label>Kick-off Meeting MP4</label>
    <type>Url</type>
</CustomField>