force-app/main/default/objects/SFL5_Projects__c/fields/Kickoff_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Date__c</fullName>
    <label>Kick-off Call Date</label>
    <type>Date</type>
</CustomField>