force-app/main/default/objects/SFL5_Projects__c/fields/Kickoff_Recap_Email__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Recap_Email__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EQeENWkCV41AveYC_OnAduMBT4hfvMYkbEXMWERbogTrFw?e=60VO9a&amp;wdLOR=c284C7321-C858-4FCA-A4F1-14767A798A95&quot;,&quot;Sample Kick-off Call Follow Up&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kick-off Recap Email</label>
    <type>Text</type>
</CustomField>