force-app/main/default/objects/SFL5_Projects__c/fields/Landing_Page_Live__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Live__c</fullName>
    <label>Landing Page Live</label>
    <type>Date</type>
</CustomField>