force-app/main/default/objects/SFL5_Projects__c/fields/Latest_Lead_Report__c.field-meta.xml
<CustomField>
    <fullName>Latest_Lead_Report__c</fullName>
    <label>Latest Lead Report</label>
    <type>Url</type>
</CustomField>