force-app/main/default/objects/SFL5_Projects__c/fields/Lead_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Delivery_Status__c</fullName>
    <description>Percentage of Leads Delivered</description>
    <formula>(Total_Leads_Delivered__c /  Lead_Guarantee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Leads Delivered</inlineHelpText>
    <label>Lead Delivery Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>