force-app/main/default/objects/SFL5_Projects__c/fields/Lead_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Guarantee__c</fullName>
    <label>Lead Guarantee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>