force-app/main/default/objects/SFL5_Projects__c/fields/Lead_Guarantee_Met__c.field-meta.xml
<CustomField>
    <fullName>Lead_Guarantee_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Guarantee Met</label>
    <type>Checkbox</type>
</CustomField>