force-app/main/default/objects/SFL5_Projects__c/fields/Lead_Guarantee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Guarantee_Notes__c</fullName>
    <label>Lead Guarantee Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>