force-app/main/default/objects/SFL5_Projects__c/fields/Lead_Report_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Lead_Report_Guidelines__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/r/teams/CustomMedia/Shared%20Documents/CSM%20RESOURCES/Content%20Studio%20Guidelines/Virtual%20Product%20Resources/Webinar%20Resources/Lead%20Report%20Guidelines.docx?d=w4bf97190de6f4777a53fd29884708cec&amp;csf=1&amp;web=1&amp;e=ZT41o2&quot;,&quot;Lead Report Guidelines&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Report Guidelines</label>
    <type>Text</type>
</CustomField>