force-app/main/default/objects/SFL5_Projects__c/fields/Leads_Unfulfilled__c.field-meta.xml
<CustomField>
    <fullName>Leads_Unfulfilled__c</fullName>
    <formula>(Lead_Guarantee__c  -  Total_Leads_Delivered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Unfulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>