force-app/main/default/objects/SFL5_Projects__c/fields/Link_URL_Link_Code__c.field-meta.xml
<CustomField>
    <fullName>Link_URL_Link_Code__c</fullName>
    <label>Link URL / Link Code</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>