force-app/main/default/objects/SFL5_Projects__c/fields/Mag_Placement__c.field-meta.xml
<CustomField>
    <fullName>Mag_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mag Placement</label>
    <type>Checkbox</type>
</CustomField>