force-app/main/default/objects/SFL5_Projects__c/fields/Market_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Market_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Market Advisor that is assigned to the project</description>
    <inlineHelpText
  >The Market Advisor that is assigned to the project</inlineHelpText>
    <label>Market Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Market Advisor)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>