force-app/main/default/objects/SFL5_Projects__c/fields/Marketing_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Type__c</fullName>
    <label>Marketing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job Order</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>