force-app/main/default/objects/SFL5_Projects__c/fields/Milestone_Details__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Details__c</fullName>
    <label>Milestone Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>