force-app/main/default/objects/SFL5_Projects__c/fields/Mod_Client_Panelists_Added_to_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Mod_Client_Panelists_Added_to_Calendar__c</fullName>
    <label>Mod &amp; Client Panelists Added to Calendar</label>
    <type>Date</type>
</CustomField>