force-app/main/default/objects/SFL5_Projects__c/fields/Moderator_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Assigned__c</fullName>
    <label>Moderator Assigned</label>
    <type>Date</type>
</CustomField>