force-app/main/default/objects/SFL5_Projects__c/fields/Moderator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Notes__c</fullName>
    <label>Moderator Notes</label>
    <type>TextArea</type>
</CustomField>