force-app/main/default/objects/SFL5_Projects__c/fields/Moderator_Speaker_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Speaker_Reminder__c</fullName>
    <formula
  >&quot;Create Resource Engagements for Moderator and Speakers&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator/Speaker Reminder</label>
    <type>Text</type>
</CustomField>