force-app/main/default/objects/SFL5_Projects__c/fields/MP4_Link__c.field-meta.xml
<CustomField>
    <fullName>MP4_Link__c</fullName>
    <description>Direct link to the MP4 recording</description>
    <inlineHelpText>Direct link to the MP4 recording</inlineHelpText>
    <label>MP4 Link</label>
    <type>Url</type>
</CustomField>