force-app/main/default/objects/SFL5_Projects__c/fields/NAV_Analyst_Note__c.field-meta.xml
<CustomField>
    <fullName>NAV_Analyst_Note__c</fullName>
    <inlineHelpText
  >Used by Navigator Analyst to communicate latest note (this also pulls over to the Account as a field called &quot;NAV Analyst Status&quot;)</inlineHelpText>
    <label>NAV Analyst Note [DELETE]</label>
    <type>TextArea</type>
</CustomField>