force-app/main/default/objects/SFL5_Projects__c/fields/NAV_Analyst_Note_History__c.field-meta.xml
<CustomField>
    <fullName>NAV_Analyst_Note_History__c</fullName>
    <inlineHelpText
  >History of the NAV Analyst Notes. Insert most recent note (keep it short). Do not erase previous notes.</inlineHelpText>
    <label>NAV Analyst Note History [DELETE]</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>