force-app/main/default/objects/SFL5_Projects__c/fields/NAV_Hours_CY__c.field-meta.xml
<CustomField>
    <fullName>NAV_Hours_CY__c</fullName>
    <description
  >The number of Navigator hours allotted for the current year based on contract start and end dates</description>
    <inlineHelpText
  >The number of Navigator hours allotted for the current year based on contract start and end dates</inlineHelpText>
    <label>NAV Hours CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>