force-app/main/default/objects/SFL5_Projects__c/fields/NAV_Hours_Total_Cx__c.field-meta.xml
<CustomField>
    <fullName>NAV_Hours_Total_Cx__c</fullName>
    <description
  >The number of total Navigator hours allotted to Client based on DGN and/or DEN contract(s)</description>
    <inlineHelpText
  >The number of total Navigator hours allotted to Client based on DGN and/or DEN contract(s)</inlineHelpText>
    <label>Hours Contracted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>