force-app/main/default/objects/SFL5_Projects__c/fields/NAV_Member_Engagement__c.field-meta.xml
<CustomField>
    <fullName>NAV_Member_Engagement__c</fullName>
    <formula
  >Client__r.NAV_Member_Engagement__r.FirstName &amp; &quot; &quot; &amp; Client__r.NAV_Member_Engagement__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV Member Engagement</label>
    <type>Text</type>
</CustomField>