force-app/main/default/objects/SFL5_Projects__c/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <label>Newsletter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GovTech Today</fullName>
            </value>
            <value>
                <fullName>Justice and Public Safety (JPS)</fullName>
            </value>
            <value>
                <fullName>GovTech Security News (GTSN)</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>Ed Roundup</fullName>
            </value>
            <value>
                <fullName>Higher Ed Roundup</fullName>
            </value>
            <value>
                <fullName>K-12 Roundup</fullName>
            </value>
            <value>
                <fullName>GOVERNING Daily</fullName>
            </value>
            <value>
                <fullName>GOVERNING Insider</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Public Workforce</fullName>
            </value>
            <value>
                <fullName>Tax and Revenue</fullName>
            </value>
            <value>
                <fullName>Efficiency</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>