force-app/main/default/objects/SFL5_Projects__c/fields/Newsletter_Text__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Text__c</fullName>
    <label>Newsletter Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>