force-app/main/default/objects/SFL5_Projects__c/fields/No_Cover_Letter_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Cover_Letter_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Cover Letter Required</label>
    <type>Checkbox</type>
</CustomField>