force-app/main/default/objects/SFL5_Projects__c/fields/No_of_Web_Vendor_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_Web_Vendor_Leads__c</fullName>
    <formula>Paper__r.No_of_Web_Vendor_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Web Vendor Leads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>