force-app/main/default/objects/SFL5_Projects__c/fields/Note_4__c.field-meta.xml
<CustomField>
    <fullName>Note_4__c</fullName>
    <label>Note 4</label>
    <length>60</length>
    <type>Text</type>
</CustomField>