force-app/main/default/objects/SFL5_Projects__c/fields/Note_6__c.field-meta.xml
<CustomField>
    <fullName>Note_6__c</fullName>
    <label>Note 6</label>
    <length>60</length>
    <type>Text</type>
</CustomField>