force-app/main/default/objects/SFL5_Projects__c/fields/Nurture_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nurture Campaign</label>
    <type>Checkbox</type>
</CustomField>