force-app/main/default/objects/SFL5_Projects__c/fields/Offers_Queue__c.field-meta.xml
<CustomField>
    <fullName>Offers_Queue__c</fullName>
    <formula
  >HYPERLINK(&quot;https://cms.erepublic.com/common/offers_queues&quot;,&quot;CMS Offers Queue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offers Queue</label>
    <type>Text</type>
</CustomField>