force-app/main/default/objects/SFL5_Projects__c/fields/On24_Console_Updated__c.field-meta.xml
<CustomField>
    <fullName>On24_Console_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On24 Console Updated</label>
    <type>Checkbox</type>
</CustomField>