force-app/main/default/objects/SFL5_Projects__c/fields/On24_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>On24_Event_ID__c</fullName>
    <formula>Event__r.On24_Event_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On24 Event ID</label>
    <type>Text</type>
</CustomField>