force-app/main/default/objects/SFL5_Projects__c/fields/Ongoing_Project__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This indicates that a project is used as a bucket for regular tasks that do not call for the creation of their own project, but have a general similarity and should be grouped together.</description>
    <inlineHelpText
  >This indicates that a project is used as a bucket for regular tasks that do not call for the creation of their own project, but have a general similarity and should be grouped together.</inlineHelpText>
    <label>Ongoing Project</label>
    <type>Checkbox</type>
</CustomField>