force-app/main/default/objects/SFL5_Projects__c/fields/Optional_Dry_Run_Call_Needed__c.field-meta.xml
<CustomField>
    <fullName>Optional_Dry_Run_Call_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Dry Run Call Needed</label>
    <type>Checkbox</type>
</CustomField>