force-app/main/default/objects/SFL5_Projects__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <description>Name of the ad order for web delivery.</description>
    <inlineHelpText
  >Name it after the client campaign if available (ie Q3 12 Public) or a generic year or product name (2012, or Resource Center - How to Guide, or Video Ads)</inlineHelpText>
    <label>Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>