force-app/main/default/objects/SFL5_Projects__c/fields/Outline_Document__c.field-meta.xml
<CustomField>
    <fullName>Outline_Document__c</fullName>
    <label>Outline Document</label>
    <type>Url</type>
</CustomField>