force-app/main/default/objects/SFL5_Projects__c/fields/Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Count__c</fullName>
    <description
  >The number of pages that the Custom Media project is counted toward delivery statistics.</description>
    <inlineHelpText
  >The number of pages that the Custom Media project is counted toward delivery statistics.</inlineHelpText>
    <label>Page Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>