force-app/main/default/objects/SFL5_Projects__c/fields/Panel_Questions__c.field-meta.xml
<CustomField>
    <fullName>Panel_Questions__c</fullName>
    <label>Panel Questions</label>
    <type>Url</type>
</CustomField>