force-app/main/default/objects/SFL5_Projects__c/fields/Panel_Questions_Sent_to_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Panel_Questions_Sent_to_Attendees__c</fullName>
    <label>Panel Questions Sent to Attendees</label>
    <type>Date</type>
</CustomField>