force-app/main/default/objects/SFL5_Projects__c/fields/Paper_Description__c.field-meta.xml
<CustomField>
    <fullName>Paper_Description__c</fullName>
    <inlineHelpText
  >This is the approved web copy, webinar promo, roundtable invite, etc. for your project</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>