force-app/main/default/objects/SFL5_Projects__c/fields/Paper_Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Paper_Display_Title__c</fullName>
    <formula>Paper__r.Asset_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper Display Title</label>
    <type>Text</type>
</CustomField>