force-app/main/default/objects/SFL5_Projects__c/fields/Paper_ID__c.field-meta.xml
<CustomField>
    <fullName>Paper_ID__c</fullName>
    <formula>Paper__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper ID</label>
    <type>Text</type>
</CustomField>