force-app/main/default/objects/SFL5_Projects__c/fields/Paper_Landing_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Paper_Landing_Page_Link__c</fullName>
    <formula>Paper__r.Landing_Page_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper Landing Page Link</label>
    <type>Text</type>
</CustomField>