force-app/main/default/objects/SFL5_Projects__c/fields/Paper_OneForm_Link__c.field-meta.xml
<CustomField>
    <fullName>Paper_OneForm_Link__c</fullName>
    <formula>Paper__r.OneForm_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper OneForm Link</label>
    <type>Text</type>
</CustomField>