force-app/main/default/objects/SFL5_Projects__c/fields/Paper_Posted__c.field-meta.xml
<CustomField>
    <fullName>Paper_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Posted</label>
    <type>Checkbox</type>
</CustomField>