force-app/main/default/objects/SFL5_Projects__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This field is used to relate sub-projects to a main parent project for easy viewing.</description>
    <inlineHelpText
  >This field is used to relate sub-projects to a main parent project for easy viewing.</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>SFL5_Projects__c</referenceTo>
    <relationshipLabel>Sub-Projects</relationshipLabel>
    <relationshipName>Sub_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>