force-app/main/default/objects/SFL5_Projects__c/fields/Payment_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Payment_Guidelines__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/t/CustomMedia/EXXbfVkhFwxLvZpItjRi-zQBUeLzZZvlslUHVJunWhahxw?e=Z4L7fc&amp;wdLOR=c02F5005C-871D-4FB3-BC50-CC25DBCB4EE7&quot;,&quot;Payment Guidelines&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Guidelines</label>
    <type>Text</type>
</CustomField>