force-app/main/default/objects/SFL5_Projects__c/fields/PDF_Slides_Added_to_CMS__c.field-meta.xml
<CustomField>
    <fullName>PDF_Slides_Added_to_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Slides Added to CMS</label>
    <type>Checkbox</type>
</CustomField>