force-app/main/default/objects/SFL5_Projects__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula
  >Score_3__c  +  Score_4__c  +  S1__c  +  Score_2__c  +  Score_5__c</formula>
    <label>Percent Complete (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>