force-app/main/default/objects/SFL5_Projects__c/fields/Phase_Age__c.field-meta.xml
<CustomField>
    <fullName>Phase_Age__c</fullName>
    <formula>IF(ISPICKVAL(Project_Phase__c, &quot;Completed&quot;)||
ISPICKVAL(Project_Phase__c, &quot;Cancelled&quot;),(
Completion_Date__c - (Phase_Date_Last_Updated__c)),
TODAY() - (Phase_Date_Last_Updated__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>