force-app/main/default/objects/SFL5_Projects__c/fields/Phase_Date_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Phase_Date_Last_Updated__c</fullName>
    <label>Phase Date Last Updated</label>
    <type>Date</type>
</CustomField>