force-app/main/default/objects/SFL5_Projects__c/fields/Phase_Note__c.field-meta.xml
<CustomField>
    <fullName>Phase_Note__c</fullName>
    <label>Phase Note</label>
    <type>TextArea</type>
</CustomField>