force-app/main/default/objects/SFL5_Projects__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Step Nurture</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Client Content</fullName>
            </value>
            <value>
                <fullName>eRepublic Content</fullName>
            </value>
            <value>
                <fullName>Initiative</fullName>
            </value>
            <value>
                <fullName>Initiative - Shared</fullName>
            </value>
            <value>
                <fullName>Lead Nurture</fullName>
            </value>
            <value>
                <fullName>Adhesion</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Big Box</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Channel Sponsorship</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Future of Finance</fullName>
            </value>
            <value>
                <fullName>GOVERNING Daily</fullName>
            </value>
            <value>
                <fullName>GovTech Cybersecurity</fullName>
            </value>
            <value>
                <fullName>GovTech Today</fullName>
            </value>
            <value>
                <fullName>HED</fullName>
            </value>
            <value>
                <fullName>Homepage Takeover</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Multi-Touch</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Resource Module</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Special Issue</fullName>
            </value>
            <value>
                <fullName>Sponsored Article</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>