force-app/main/default/objects/SFL5_Projects__c/fields/PM_Note__c.field-meta.xml
<CustomField>
    <fullName>PM_Note__c</fullName>
    <description
  >History of the lifecycle of the project. Insert most recent note (keep it short), followed by the date.  Do not erase previous notes.</description>
    <inlineHelpText
  >History of the lifecycle of the project. Insert most recent note (keep it short), followed by the date.  Do not erase previous notes.</inlineHelpText>
    <label>Project Note History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>