force-app/main/default/objects/SFL5_Projects__c/fields/PM_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Note_Date__c</fullName>
    <label>Project Note Date</label>
    <type>Date</type>
</CustomField>