force-app/main/default/objects/SFL5_Projects__c/fields/PM_Note_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>PM_Note_Last_Updated__c</fullName>
    <description
  >Time stamp of when the PM Note was most recently updated.</description>
    <inlineHelpText
  >Time stamp of when the PM Note was most recently updated.</inlineHelpText>
    <label>Project Note Last Updated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>